force-app/main/default/objects/NBFC_Agent_Trigger__e/NBFC_Agent_Trigger__e.object-meta.xml
<CustomObject>
    <label>NBFC Agent Trigger</label>
    <pluralLabel>NBFC Agent Triggers</pluralLabel>
</CustomObject>