force-app/main/default/objects/NBFC_Agent_Trigger__e/fields/Additional_Context__c.field-meta.xml
<CustomField>
    <fullName>Additional_Context__c</fullName>
    <label>Additional Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>