force-app/main/default/objects/NBFC_Agent_Trigger__e/fields/Event_Action__c.field-meta.xml
<CustomField>
    <fullName>Event_Action__c</fullName>
    <label>Event Action</label>
    <length>50</length>
    <type>Text</type>
</CustomField>