force-app/main/default/objects/NBFC_Agent_Trigger__e/fields/Loan_Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application_Id__c</fullName>
    <label>Loan Application Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>