force-app/main/default/objects/NBFC_Agent_Trigger__e/fields/Triggered_At__c.field-meta.xml
<CustomField>
    <fullName>Triggered_At__c</fullName>
    <label>Triggered At</label>
    <type>DateTime</type>
</CustomField>